* Add the ability to edit link text for certain types of links. Work in progress. * Suggest archived pages from the Wayback Machine as possible alternatives when editing a broken link. * The "Status" column is now properly updated when editing a link. * Attempt to fix text alignment in notification emails when using a RTL locale (experimental). * Link text: Strip tags on display, not when parsing. This prevents you from losing data when trying to edit a link whose text contains HTML tags. * Fix: Flash a link in green when it is successfully edited. This used to work before, but was broken in one of the past WP updates and I never noticed until now. * Change the AJAX edit callback from GET to POST. It makes more sense for requests that modify data to use POST, and it is also a tiny bit more secure. * Email notifications: only display the "see all broken links here" link if the recipient can actually access the link (you need the "edit_others_posts" cap to view the broken link list).
git-svn-id: https://plugins.svn.wordpress.org/broken-link-checker/trunk@782495 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/links-page.css
+++ b/css/links-page.css
@@ -246,6 +246,91 @@ td.column-link-text, td.column-new-link-text {
 	vertical-align: middle;
 }
 
+
+/* Inline editor */
+
+.blc-inline-editor label {
+    display: block;
+    margin: 0.2em 0;
+}
+
+.blc-inline-editor .blc-input-text-wrap {
+    display: block;
+    margin-left: 5em;
+}
+
+.blc-inline-editor .blc-input-text-wrap input[type="text"] {
+    width: 100%;
+}
+
+.blc-inline-editor .blc-input-text-wrap textarea {
+    width: 100%;
+}
+
+
+.blc-inline-editor label span.title {
+    display: block;
+    float: left;
+    width: 5em;
+}
+
+.blc-inline-editor span.title {
+    line-height: 1.8em;
+}
+
+.blc-inline-editor-content > h4:first-child {
+    margin-top: 0.4em;
+}
+
+/* Inline editor: suggestion list */
+ul.blc-suggestion-list {
+    list-style: disc;
+}
+
+ul.blc-suggestion-list li {
+    margin-left: 1.5em;
+}
+
+ul.blc-suggestion-list li:hover {
+    background-color: white;
+}
+
+.blc-suggestion-details {
+    margin-right: 9em;
+    display: block;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.blc-inline-editor input.blc-use-url-button {
+    float: right;
+    max-width: 8em;
+
+    margin-left: 1em;
+    margin-top: 8px;
+}
+
+.blc-inline-editor code.blc-suggestion-url {
+    white-space: nowrap;
+}
+
+.blc-inline-editor .blc-suggestion-name {
+    display: block;
+}
+
+
+.blc-inline-editor-buttons {
+    clear: both;
+    margin: 0.5em 0 0;
+    padding: 0.5em;
+}
+
+.blc-inline-editor-content {
+    max-width: 600px;
+}
+
+
 /* Bulk edit form */
 #bulk-edit {
 	display: none;
